kubernetes/CKAD/services-and-networking/lab-challenge/svc.yaml
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  labels:
    app: my-nginx
  name: my-nginx
spec:
  ports:
  - name: 8080-80
    port: 8080
    protocol: TCP
    targetPort: 80
  selector:
    app: my-nginx
  type: ClusterIP
status:
  loadBalancer: {}
