kubernetes/CKAD/services-and-networking/lab-challenge/netw-policy-deny-all-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: default-deny
spec:
  podSelector:
    matchLabels:
      app: my-nginx
  policyTypes:
  - Ingress
